<resources>
    <string name="app_name">Hello Demo</string>
    <string name="friends"><u>Friends</u></string>
    <string name="followers"><u>Followers</u></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="already_have_an_account_login">Already have an account? Login.</string>
    <string name="title_activity_register">Register</string>
    <string name="sign_up_with_facebook">Signup with Facebook</string>
    <string name="sign_up">Register</string>
    <string name="don_t_have_an_account_sing_up">Don\'t have an account? Sign Up!</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="favorite">FAVORITE</string>
    <string name="favorited">FAVORITED</string>
    <string name="forward">SEND</string>
    <string name="message">MESSAGE</string>
    <string name="admin">(Admin)</string>
    <string name="messages">Messages</string>
    <string name="start_new_conversation">Start a new conversation</string>
    <string name="delete">DELETE</string>
    <string name="inbox">Inbox</string>
    <string name="notification">Notification</string>
    <string name="my_groups">My Groups</string>
    <string name="new_group">+ New</string>
    <string name="logout">Logout</string>
    <string name="title_activity_send_song_popup">Contacts</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="send">Send</string>
    <string name="add_a_friend">Add a Friend</string>
    <string name="your_qr_code">Your QR code</string>
    <string name="scan_your_friend_s_code">Scan your friend\'s code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="prompt_message">Type something here</string>
    <string name="action_send">Send</string>
    <string name="notes">Notes</string>
    <string name="write_a_note"> Write a note</string>
    <string name="next">Next</string>
    <string name="add_friends">Add Friends</string>
    <string name="contacts">Contacts</string>
    <string name="leave_a_message">Leave a message</string>
    <string name="leave_a_message_with_your_track">Leave a message with your track</string>
    <string name="cancel">Cancel</string>
    <string name="back_icon">Back Icon</string>


    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">Scanner cannot run because it does not have the camera permission.</string>
    <string name="low_storage_error">QR Code dependencies cannot be downloaded due to low device storage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="remember_me">Remember Me</string>
</resources>
