<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="10dp"
        android:paddingStart="@dimen/_8sdp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_5sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="?attr/actionBarSize"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back_icon"
                android:src="@drawable/back_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.hellodemo.ui.MemphisTextView
                    android:id="@+id/chat_title_song_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/inbox"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <com.hellodemo.ui.MemphisTextView
                    android:id="@+id/chat_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/inbox"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="gone"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/settings_icon"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:padding="@dimen/_4sdp"
                app:srcCompat="@drawable/threedots" />


            <ImageView
                android:id="@+id/notes"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:padding="@dimen/_4sdp"
                android:visibility="gone"
                app:srcCompat="@drawable/icon_notes" />

            <ImageView
                android:id="@+id/nav_message"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:padding="@dimen/_4sdp"
                android:visibility="gone"
                app:srcCompat="@drawable/item_msg" />

            <ImageView
                android:id="@+id/nav_add_icon"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:padding="@dimen/_4sdp"
                android:visibility="gone"
                app:srcCompat="@drawable/add" />
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>
    <FrameLayout
        android:id="@+id/flContent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flContent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.hellodemo.ui.MemphisEditTextView
            android:id="@+id/message_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border"
            android:hint="@string/prompt_message"
            android:imeActionLabel="@string/action_send"
            android:imeOptions="actionDone"
            android:inputType="textShortMessage"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/txt_primary"
            android:textSize="14sp" />
        <!--android:drawableRight="@drawable/icon_smile"-->

        <ImageView
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="@color/white"
            android:contentDescription="@string/action_send"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/icon_send" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
